--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -442,8 +442,7 @@ jobs:
             # Clone with LFS and pull large files
             GIT_LFS_SKIP_SMUDGE=1 git clone --depth 1 "$REPO_URL" "$TARGET_DIR"
             cd "$TARGET_DIR"
-            echo "Downloading model weights (this may take a while for large models)..."
-            git lfs pull --progress
+            git lfs pull
             cd ..
             
             # Verify model weights exist (not just LFS pointers)
@@ -570,8 +569,7 @@ jobs:
               # Clone with LFS and pull large files
               GIT_LFS_SKIP_SMUDGE=1 git clone --depth 1 "$REPO_URL" "$TARGET_DIR"
               cd "$TARGET_DIR"
-              echo "Downloading embedding model weights..."
-              git lfs pull --progress
+              git lfs pull
               cd ..
             fi
 
