Fix script_path concatenation in job_runner call
Move '/start_service.sh' inside the template expression to ensure
proper string concatenation with the rundir output.

--- a/yamls/hsp.yaml
+++ b/yamls/hsp.yaml
@@ -701,7 +701,7 @@ jobs:
           shebang: "#!/bin/bash"
           rundir: ${{ needs.setup.outputs.rundir }}
           use_existing_script: true
-          script_path: ${{ needs.setup.outputs.rundir }}/start_service.sh
+          script_path: ${{ needs.setup.outputs.rundir + '/start_service.sh' }}
           scheduler: ${{ inputs.submit_to_scheduler }}
           inject_markers: true
           slurm:
